[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemies/newEnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="basicEnemySpawner" type="Timer" parent="."]

[node name="blinkerEnemySpawner" type="Timer" parent="."]

[connection signal="timeout" from="basicEnemySpawner" to="." method="_on_basicEnemySpawner_timeout"]
[connection signal="timeout" from="blinkerEnemySpawner" to="." method="_on_blinkerEnemySpawner_timeout"]
